	of the adeos_virtualize_irq_from() call. 
	
	* arch/ppc/hal.c (rthal_release_irq): Handle the possible failure 
	of the adeos_virtualize_irq_from() call. 

	* arch/i386/hal.c (__rthal_init): Handle the possible failure of
	adeos_virtualize_irq() and adeos_register_domain(). Perform the 
	necessary cleanups on all failures in this function.
	
2005-03-06  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/module.c (rtai_shutdown): Make sure to wipe out all
	lazybones before trying to unregister the skin, otherwise the
	operation might fail because some threads did not exit, and leave
	a dandling pointer to our module into the global syscall
	multiplexer table.

	* nucleus/shadow.c (xnshadow_unmap): Fix regression wrt refcount
	handling, damnit.

	* configure.in: (Re-)enable compilation w/ 2.95.x.

2005-03-06  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Let CC variable take precedence over
	CROSS_COMPILE, replace --with-CC with --with-cc.

2005-03-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pipe.c (xnpipe_open): Clean USER_CONN bit when open
	fails.

2005-03-04  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_init_thread): Don't check the thread arg
	for NULL value; this can be caught using the simulator, and such
	test is way too limited to be efficient in the most annoying cases
	anyway (e.g. stray pointers).

2005-03-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (xnfusion_mount): Do not wreck the current
	fusion interface id. in case somebody tries to mount it twice.

	* nucleus/shadow.c (xnshadow_unmap): Check task pointer value
	earlier.

	* nucleus/thread.c (xnthread_init): Init the TCB so that its
	fields are set to known invalid values.

	* testsuite/klatency/latency-module.c (__latency_init): Rename the
	sampling thread to "ksampling" so that we can start both kernel
	and user-space latency tests concurrently.

2005-03-01  Philippe Gerum  <rpm@xenomai.org>
