@@ -870,10 +870,15 @@ int __rthal_init (void)
 	return -EBUSY;
 	}
 
-    adeos_virtualize_irq(rthal_sysreq_virq,
+    err = adeos_virtualize_irq(rthal_sysreq_virq,
 			 &rthal_ssrq_trampoline,
 			 NULL,
 			 IPIPE_HANDLE_MASK);
+    if (err)
+    {
+        printk(KERN_ERR "RTAI: Failed to virtualize IRQ.\n");
+        goto out_free_irq;
+    }
 
     if (rthal_cpufreq_arg == 0)
 	{
@@ -905,7 +910,23 @@ int __rthal_init (void)
     err = adeos_register_domain(&rthal_domain,&attr);
 
     if (!err)
-	rthal_init_done = 1;
+	    rthal_init_done = 1;
+    else 
+    {
+        printk(KERN_ERR "RTAI: Domain registration failed.\n");
+        goto out_proc_unregister;
+    }
+
+    return 0;
+
+out_proc_unregister:
+#ifdef CONFIG_PROC_FS
+    rthal_proc_unregister();
+#endif
+    adeos_virtualize_irq(rthal_sysreq_virq,NULL,NULL,0);
+   
+out_free_irq:
+    adeos_free_irq(rthal_sysreq_virq);
 
     return err;
 }
